Delete old GetTask