@@ -17,14 +17,16 @@
  */
 package org.jackhuang.hmcl.task;
 
+import org.jetbrains.annotations.Nullable;
+
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.URI;
+import java.net.http.HttpResponse;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.util.List;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 
@@ -32,27 +34,29 @@ import static java.nio.charset.StandardCharsets.UTF_8;
  *
  * @author huangyuhui
  */
-public final class GetTask extends FetchTask<String> {
+public final class GetTask extends FetchTask2<String> {
+
+    private static final int DEFAULT_RETRY = 3;
 
     private final Charset charset;
 
-    public GetTask(URL url) {
+    public GetTask(URI url) {
         this(url, UTF_8);
     }
 
-    public GetTask(URL url, Charset charset) {
-        this(url, charset, 3);
+    public GetTask(URI url, Charset charset) {
+        this(url, charset, DEFAULT_RETRY);
     }
 
-    public GetTask(URL url, Charset charset, int retry) {
-        this(Collections.singletonList(url), charset, retry);
+    public GetTask(URI url, Charset charset, int retry) {
+        this(List.of(url), charset, retry);
     }
 
-    public GetTask(List<URL> url) {
-        this(url, UTF_8, 3);
+    public GetTask(List<URI> url) {
+        this(url, UTF_8, DEFAULT_RETRY);
     }
 
-    public GetTask(List<URL> urls, Charset charset, int retry) {
+    public GetTask(List<URI> urls, Charset charset, int retry) {
         super(urls, retry);
         this.charset = charset;
 
@@ -70,7 +74,7 @@ public final class GetTask extends FetchTask<String> {
     }
 
     @Override
-    protected Context getContext(URLConnection conn, boolean checkETag) {
+    protected Context getContext(@Nullable HttpResponse<?> response, boolean checkETag) {
         return new Context() {
             final ByteArrayOutputStream baos = new ByteArrayOutputStream();
 
@@ -87,7 +91,7 @@ public final class GetTask extends FetchTask<String> {
                 setResult(result);
 
                 if (checkETag) {
-                    repository.cacheText(result, conn);
+                    repository.cacheText(response, result);
                 }
             }
         };
